[tool.poetry]
name = "test-bewise"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]
readme = "README.md"
packages = [{include = "test_bewise"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
fastapi = "^0.95.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
